%% Mermaid ER diagram for Eastmond Villas (MVP schema)
%% Render with a Mermaid-enabled viewer (VSCode Mermaid Preview, GitHub, etc.)

erDiagram
    USERS {
        int id PK
        string email
        string name
        string role
        string permission
        string phone
        text address
        datetime date_joined
        bool is_verified
    }

    VILLAS {
        int id PK
        string title
        text description
        decimal price
        int bedrooms
        int bathrooms
        bool pool
        string city
        text address
        float latitude
        float longitude
        string villa_name
        json signature_distinctions
        json amenities_indoor
        json amenities_outdoor
        json rules
        json status
        int owner_id FK
    }

    VILLA_IMAGES {
        int id PK
        int villa_id FK
        string file
        string caption
        bool is_primary
    }

    BOOKING_RATES {
        int id PK
        int villa_id FK
        string period
        int minimum_stay
        decimal rate_per_night
    }

    BOOKINGS {
        int id PK
        int villa_id FK
        int user_id FK
        string full_name
        string email
        date check_in
        date check_out
        string status
        decimal total_price
        string google_event_id
        datetime created_at
    }

    PAYMENTS {
        int id PK
        int booking_id FK
        decimal amount
        string provider
        string status
        datetime paid_at
    }

    CALENDAR_EVENTS {
        int id PK
        int booking_id FK
        string google_event_id
        datetime start_time
        datetime end_time
        string created_by
    }

    VILLAS ||--o{ VILLA_IMAGES : has
    VILLAS ||--o{ BOOKING_RATES : has
    VILLAS ||--o{ BOOKINGS : receives
    USERS ||--o{ BOOKINGS : makes
    BOOKINGS ||--o{ PAYMENTS : has
    BOOKINGS ||--o{ CALENDAR_EVENTS : maps_to

    %% Optional tables from your ERD image
    VIEWS {
        int id PK
        int villa_id FK
        int count
    }

    DOWNLOADS {
        int id PK
        int villa_id FK
        int count
    }

    VILLAS ||--o{ VIEWS : "has views"
    VILLAS ||--o{ DOWNLOADS : "has downloads"

    %% Notes
    %% - Use timezone-aware datetimes (USE_TZ=True in Django settings).
    %% - Store Google OAuth tokens in a separate model if you support per-user calendar sync.
    %% - For location search add a DB index on (latitude, longitude) or use PostGIS for advanced geo queries.
